<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:key="screenMain">
    <android.support.v7.preference.PreferenceCategory
        android:title="MENU DNS">
    <android.support.v7.preference.CheckBoxPreference
        android:key="dnsForward"
        android:summary="@string/summary_forward_dns"
        android:title="@string/title_forward_dns" />
    <com.miaw.pro.vpn.view.SummaryEditTextPreference
        android:key="dnsResolver"
        android:title="@string/title_dns_primary"
        android:summary="@string/summary_dns_primary"
        android:dialogMessage="@string/dialog_message_dns_primary"
        android:singleLine="true"/>
 
       <android.support.v7.preference.CheckBoxPreference
			android:key="udpForward"
			android:summary="@string/summary_forward_udp"
			android:title="@string/title_forward_udp" />
		<com.miaw.pro.vpn.view.SummaryEditTextPreference
            android:key="udpResolver"
            android:title="@string/title_resolver_udp"
            android:summary="@string/summary_resolver_udp"
            android:dialogMessage=""
			android:singleLine="true"/>
    </android.support.v7.preference.PreferenceCategory>
    
   	<android.support.v7.preference.PreferenceCategory 
		android:title="Data Compression">
		<android.support.v7.preference.CheckBoxPreference android:title="Data Compression" 
			android:key="data_compression" 
			android:summary="Compresses and speed up data transfer for files/data that can be compressed. NOT recommended for low memory device" 
			android:defaultValue="true" />
	</android.support.v7.preference.PreferenceCategory>
				
    <android.support.v7.preference.PreferenceCategory
        android:title="Ping Utility">
        <android.support.v7.preference.CheckBoxPreference
            android:key="auto_ping"
            android:summary="Pinger with url for keep-alive connection, used for stabilizing and prevent your connection from sleep."
            android:title="Auto Ping" />
        <com.miaw.pro.vpn.view.SummaryEditTextPreference
            android:dependency="auto_ping"
            android:key="ping_server"
            android:title="Ping Server"
            android:summary="Set ping server"
            android:defaultValue="clients3.google.com"/>
    </android.support.v7.preference.PreferenceCategory>
    
	   <com.miaw.pro.vpn.view.SummaryEditTextPreference
            android:key="pingerSSH"
            android:title="@string/title_ping_time"
			android:maxLength="3"
            android:summary="@string/no_value"
			android:singleLine="true"/>
	
				
    <android.support.v7.preference.PreferenceCategory
        android:title="More">
        
		<android.support.v7.preference.CheckBoxPreference
			android:key="autoClearLogs"
			android:summary="@string/summary_auto_clear_log"
			android:title="@string/title_auto_clear_log"/>
		<android.support.v7.preference.CheckBoxPreference
			android:key="hideLog"
			android:summary="@string/summary_hide_log"
			android:title="@string/title_hide_log"/>
			
	</android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>
